# siriquantum

./: .gitignore  CMakeLists.txt  README.md
common/: README.md
config/: README.md  trading.template.json
docs/: siriquantum_dev_impl_plan.md  unified_trading_adapter_refactoring_plan.md
exchange/: CMakeLists.txt  README.md
exchange/market_data/: README.md  market_update.h
exchange/order_server/: README.md  client_request.h  client_response.h
logs/: README.md
scripts/: README.md  test_zerodha_auth.sh  test_zerodha_liquidity_taker.sh  test_zerodha_market_data.sh  test_zerodha_order_book.sh  test_zerodha_order_gateway.sh
scripts/binance/: build_and_test_binance_websocket.sh  build_binance_websocket_test.sh
scripts/system/: build.sh
scripts/zerodha/: test_zerodha_auth.sh  test_zerodha_liquidity_taker.sh  test_zerodha_market_data.sh  test_zerodha_order_book.sh  test_zerodha_order_gateway.sh
tests/: CMakeLists.txt  README.md  test_binance_trading_system.cpp  zerodha_auth_test.cpp  zerodha_liquidity_taker_test.cpp  zerodha_market_data_test.cpp  zerodha_order_book_test.cpp  zerodha_order_gateway_test.cpp
tests/binance/: test_binance_trading_system.cpp
tests/zerodha/: zerodha_auth_test.cpp  zerodha_order_book_test.cpp
trading/: CMakeLists.txt  trading_main.cpp
trading/adapters/: CMakeLists.txt  README.md
trading/adapters/binance/: CMakeLists.txt  README.md
trading/adapters/binance/market_data/: README.md  binance_config.h  binance_market_data_adapter.h  binance_market_data_consumer.cpp  binance_market_data_consumer.h
trading/adapters/binance/order_gw/: README.md  binance_order_gateway.cpp  binance_order_gateway.h  binance_order_gateway_adapter.cpp  binance_order_gateway_adapter.h
trading/adapters/zerodha/: CMakeLists.txt  README.md
trading/adapters/zerodha/auth/: CMakeLists.txt  README.md  totp.h  zerodha_authenticator.cpp  zerodha_authenticator.h
trading/adapters/zerodha/market_data/: CMakeLists.txt  README.md  environment_config.cpp  environment_config.h  environment_config.md  instrument_token_manager.cpp  instrument_token_manager.h  instrument_token_manager.md  zerodha_market_data_adapter.cpp  zerodha_market_data_adapter.h  zerodha_websocket_client.cpp  zerodha_websocket_client.h
trading/adapters/zerodha/market_data/orderbook/: README.md  zerodha_order_book.cpp  zerodha_order_book.h
trading/adapters/zerodha/order_gw/: CMakeLists.txt  README.md  zerodha_order_gateway_adapter.cpp  zerodha_order_gateway_adapter.h
trading/adapters/zerodha/strategy/: CMakeLists.txt  zerodha_liquidity_taker.cpp  zerodha_liquidity_taker.h
trading/strategy/: CMakeLists.txt  market_order_book.cpp  market_order_book.h  order_manager.h
